se añadio el CU18 y CU19
